--- a/first/index.html
+++ b/first/index.html
@@ -19,8 +19,8 @@
         Show edges
     </label>
     <label>
-        <input type="checkbox" id="random-start">
-        Random start
+        <input type="checkbox" id="random-start-goal">
+        Random start/goal
     </label>
     <button id="go">Go</button>
     <script src="main.js"></script>
